# marc_db

./: .gitignore  README.md  alembic.ini  pyproject.toml  schema.sql
.github/workflows/: test.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20240928_remove_source_column.py  20250904_remove_source_column.py  20251028_add_mash_contamination.py
marc_db/: __init__.py  cli.py  db.py  ingest.py  mock.py  models.py  views.py
tests/: test_amr_data.tsv  test_amr_ingest.py  test_anonymized.tsv  test_assembly_data.tsv  test_assembly_ingest.py  test_bad_duplicates.tsv  test_cli.py  test_ingest.py  test_models.py  test_multi_aliquot.tsv  test_new_views.py  test_taxonomic_assignment.tsv
