[project]
name = "marc_db"
description = "A Python library for defining and interacting with the mARC db"
dynamic = ["version"]
dependencies = [
    "SQLAlchemy==2.0.43",
    "pandas==2.3.2",
    "openpyxl==3.1.5",
    "alembic==1.13.1",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
    "pytest",
    "pytest-cov",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "marc_db.__version__"}

[tool.setuptools.packages.find]
include = ["marc_db"]

[project.scripts]
marc_db = "marc_db.cli:main"
