[project]
name = "marc_db"
description = "A Python library for defining and interacting with the mARC db"
dynamic = ["version"]
dependencies = [
    "SQLAlchemy~=2.0",
    "pandas~=2.3",
    "openpyxl~=3.1",
    "alembic~=1.16",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black~=25.1",
    "pytest~=8.4",
    "pytest-cov~=6.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "marc_db.__version__"}

[tool.setuptools.packages.find]
include = ["marc_db"]

[project.scripts]
marc_db = "marc_db.cli:main"
